--- a/src/app/pages/log-in/log-in.component.css
+++ b/src/app/pages/log-in/log-in.component.css
@@ -1,8 +1,10 @@
 form{
     display: flex;
     flex-direction: column;
-    max-width: 300px;
+    max-width: 400px;
     margin: 0px auto;
+    background-color: white;
+    padding:50px 40px;
 }
 
 main{
