--- a/src/app/dialog-document-rename/dialog-document-rename.component.html
+++ b/src/app/dialog-document-rename/dialog-document-rename.component.html
@@ -4,6 +4,7 @@
     <mat-form-field appearance="fill">
         <mat-label>Enter new name</mat-label>
         <input matInput  formControlName="name" >
+        <span matSuffix>{{'.' + extension}}</span>
     </mat-form-field>
   </form>
 </mat-dialog-content>
