--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,21 +5,26 @@
    <a class="logo" routerLink="/">
      <img src="./assets/image/logo.png" alt="">
    </a>
-    <nav>
-      <ul>
-        <li *ngIf="(authService.isLoggedIn$ | async)"><a routerLink="storage">
-          Storage
-       </a></li>
-       <li *ngIf="!(authService.isLoggedIn$ | async)"><a routerLink="login">
-          Login
-       </a></li>
-       <li *ngIf="(authService.isLoggedIn$ | async)"><a class="logout" (click)="logout()">
-          Logout
-       </a></li>
-      </ul>
+   <!-- <ul>
+    <li *ngIf="(authService.isLoggedIn$ | async)"><a routerLink="storage">
+      Storage
+   </a></li>
+   <li *ngIf="!(authService.isLoggedIn$ | async)"><a routerLink="login">
+      Login
+   </a></li>
+   <li *ngIf="(authService.isLoggedIn$ | async)"><a class="logout" (click)="logout()">
+      Logout
+   </a></li>
+  </ul> -->
+  <nav>
+    <ul>
+      <li *ngIf="(authService.isLoggedIn$ | async)"><a routerLink="storage" >Storage</a></li>
+      <li *ngIf="!(authService.isLoggedIn$ | async)"><a routerLink="login">Login</a></li>
+      <li *ngIf="(authService.isLoggedIn$ | async)"><a class="logout" (click)="logout()">Logout</a></li>
+    </ul>
 
 
-    </nav>
+  </nav>
 
   </div>
 </header>
