--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,7 +6,7 @@
       <a mat-raised-button color="primary" [routerLink]="(authService.isLoggedIn$|async) ?  'storage' : 'login'">Get Started</a>
     </div>
     <div class="image">
-      <img src="../assets/image/storage.png">
+      <img src="../assets/image/storage1.png">
     </div>
   </div>
 </div>
