--- a/src/app/pages/storage/overview/overview.component.css
+++ b/src/app/pages/storage/overview/overview.component.css
@@ -1,17 +1,14 @@
 .wrapper{
-    padding-top:40px;
-    
+    display: flex;
+    justify-content: space-around;
 }
 
 
 .card{
     display: inline-block;
-    margin-left: 80px;
 }
 
-.card:first-child{
-    margin-left: 200px;
-}
+
 
 .number{
     width: 226px;
