--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -7,7 +7,7 @@
 .container{
     width: 100%;
     display: flex;
-    
+    align-items: center;
     justify-content: space-between;
    
 }
@@ -17,17 +17,10 @@ span{
 }
 
 
-.text{
-    margin-top: 20%;
-}
-
-.image{
-    margin-top: 14%;
-}
 
 
 h1{
-    font-size: 40px;
+    font-size: 50px;
     line-height: 50px;
     font-weight: 500;
     color:rgb(60, 73, 187);
@@ -35,19 +28,17 @@ h1{
 
 p{
     margin-top: 40px;
-    font-size: 20px;
+    font-size: 24px;
     color:rgb(43, 48, 86);
 }
 
 a{
     margin-top: 40px;
-    padding: 4px 30px;
+    padding: 10px 40px;
     border-radius: 5px;
+    font-size: 20px;
     
 }
 
-img{
-    width: 650px;
-    height: 450px;
-}
+
 
