--- a/src/app/pages/storage/storage.component.css
+++ b/src/app/pages/storage/storage.component.css
@@ -1,16 +1,17 @@
 .container{
     display: flex;
-
+    padding-top: 50px;
 }
 
 .menu{
-    margin-top: 60px;
+    padding-right: 10px;
     flex:1 1 20%;
 }
 
 .content{
-    flex:11 80%;
+    flex:1 1 80%;
     height: 100%;
+    padding-left: 10px;
 }
 
 a{
@@ -18,5 +19,15 @@ a{
     
     font-size: 20px;
     width: 200px;
-    padding: 15px 0px;
+    padding: 10px 0px;
+}
+
+ul{
+    margin-top: 0px;
+    padding-left: 0px;
+    width: 100%;
+}
+
+li , a{
+    width: 100%; 
 }
