--- a/src/app/pages/storage/upload/upload.component.css
+++ b/src/app/pages/storage/upload/upload.component.css
@@ -1,14 +1,18 @@
-main{
-    padding: 0px 20px 40px;
-}
+
 
 .wrapper{
     max-width: 80%;
-    margin: 70px auto 0px;
+    margin: 0px auto;
 }
 
 ngx-dropzone-preview{
    font-size: 12px;
+  
+}
+
+ngx-dropzone{
+    max-width: 640px;
+    overflow-y: hidden;
 }
 
 button{
