--- a/src/app/pages/manage-users/manage-users.component.html
+++ b/src/app/pages/manage-users/manage-users.component.html
@@ -32,6 +32,11 @@
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> MaxSpace </th>
                 <td mat-cell *matCellDef="let row"> {{row.maxSpace | byte}} </td>
               </ng-container>
+
+              <ng-container matColumnDef="action">
+                <th mat-header-cell *matHeaderCellDef> Action </th>
+                <td (click)="removeUser(row)" mat-cell *matCellDef="let row"> <mat-icon >delete</mat-icon></td>
+              </ng-container>
           
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
