--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="text">
       <h1>Manage <span> all your files </span><br>in <span>one place</span></h1>
       <p>A comfortable way to have access to all your files</p>
-      <a mat-raised-button color="primary" [routerLink]="(authService.isLoggedIn$|async) ?  'storage' : 'login'">Get Started</a>
+      <a mat-raised-button color="primary" [routerLink]="(authService.isLoggedIn$|async) ?  '/storage' : '/login'">Get Started</a>
     </div>
     <div class="image">
       <img src="../assets/image/storage1.png">
